force-app/main/default/objects/Battle__c/Battle__c.object-meta.xml
<CustomObject>
    <label>Battle</label>
    <nameField>
        <displayFormat>Battle-{0000}</displayFormat>
        <label>Battle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Battles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>