force-app/main/default/objects/Battle__c/fields/Pokemon_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_1_Name__c</fullName>
    <formula>Pokemon_1__r.Pokedex_Entry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pokemon 1 Name</label>
    <type>Text</type>
</CustomField>