force-app/main/default/objects/Battle__c/fields/Pokemon_2__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pokemon 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pokemon__c.Current_HP__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Battles (Pokemon 2)</relationshipLabel>
    <relationshipName>Battles1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>