force-app/main/default/objects/Battle__c/fields/Pokemon_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_2_Name__c</fullName>
    <formula>Pokemon_2__r.Pokedex_Entry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pokemon 2 Name</label>
    <type>Text</type>
</CustomField>