force-app/main/default/objects/Battle__c/fields/Victor__c.field-meta.xml
<CustomField>
    <fullName>Victor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Victor</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Battles (Victor)</relationshipLabel>
    <relationshipName>Battles2</relationshipName>
    <type>Lookup</type>
</CustomField>