force-app/main/default/objects/Battle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pokemon_1_Name__c</columns>
    <columns>Pokemon_2_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Victor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>